tests/style/dir_exclusions/expected_out.txt
=== PLAIN MODE ===
test.m: style: violates naming scheme for scripts [naming_scripts]
In inc/test.m, line 3
| _not_fine_;
| ^ lex error: unexpected character '_'
MISS_HIT Style Summary: 2 file(s) analysed, 1 style issue(s), 1 error(s)

=== HTML MODE ===
MISS_HIT Style Summary: 2 file(s) analysed, 1 style issue(s), 1 error(s)
